package com.calc.business.business_calculation_srv;

import java.util.Arrays;

public interface DataService {
    int[] retrieveData();
}


