package com.calc.business.business_calculation_srv;
import org.springframework.context.annotation.ComponentScan;
import org.springframework.context.annotation.Configuration;

@Configuration
@ComponentScan("com.calc.business.business_calculation_srv")
public class ProjectConfig {
}
